샘플 사이트 클론 코딩 일시정지

--- a/dev/pages/index.html
+++ b/dev/pages/index.html
@@ -53,7 +53,9 @@
         </header>
         <!-- //header -->
 
-        <main></main>
+        <main>
+            <section class="main-visual"></section>
+        </main>
     </div>
 </body>
 </html>
